--- a/index.html
+++ b/index.html
@@ -19,23 +19,9 @@
     <p>Day 4</p>
     <p> Not much done today, but did some research. Happy holidays!</p>
     <p>Day 3<p>
-      <script>
-        function userName() {
-          var userName = prompt("Please enter your name", "<Name goes here>");
-
-          if (userName != null) {
-          document.getElementById('welcome').innerHTML = "Hello " + userName + "! How are you today?";
-        }
-      }
-      </script>
       <button onclick="userName()">Click here to enter your name!</button>
       <div id="welcome"></div>
     <p>Day 2</p>
-      <script>
-        function createParagraph() {
-          var para = document.getElementById('loremDiv').innerHTML = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        }
-      </script>
       <button onclick="createParagraph()">Click here for Lorem Ipsum!</button>
       <div id="loremDiv"></div>
     <p> Day 1 </p>
@@ -55,5 +41,6 @@
       <p>Created by Patrick Koidal</p>
       <p>Contact: <a href="mailto:koidalpatrick@gmail.com">koidalpatrick@gmail.com</a></p>
     </footer>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
