--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <p>Day 6</p>
+    <form name="selectForm">
+      <p>
+        <label for="loremTypes">Choose some Lorem Ipsum, then click the button below.</label>
+        <select id="loremTypes" name="loremTypes" multiple="multiple">
+          <option selected="selected">Lorem</option>
+          <option>Ipsum</option>
+          <option>Dolor</option>
+          <option>Sit</option>
+          <option>Amet</option>
+        </select>
+      </p>
+      <p><input id="btn" type="button" value="How many are selected?" /></p>
+    </form>
     <p>Day 5</p>
     <img src='lorem1.jpg'>
     <p>Day 4</p>
