--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <p>Day 7</p>
+    <a href="https://twitter.com/lumberdwelling?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @lumberdwelling</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <p>Day 6</p>
     <form name="selectForm">
       <p>
@@ -31,6 +33,7 @@
       <p><input id="btn" type="button" value="How many are selected?" /></p>
     </form>
     <p>Day 5</p>
+    <p>Click below to change the image!</p>
     <img src='lorem1.jpg'>
     <p>Day 4</p>
     <p> Not much done today, but did some research. Happy holidays!</p>
@@ -46,6 +49,7 @@
     <footer id="contact">
       <p>Created by Patrick Koidal</p>
       <p>Contact: <a href="mailto:koidalpatrick@gmail.com">koidalpatrick@gmail.com</a></p>
+      <a class="twitter-follow-button" href="https://twitter.com/lumberdwelling">Follow @lumberdwelling</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </footer>
     <script src="scripts/main.js"></script>
   </body>
