--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <!-- add smashable like button that makes an airhorn sound and says smash -->
     <p>Day 7</p>
     <a href="https://twitter.com/lumberdwelling?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @lumberdwelling</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <p>Day 6</p>
