--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
-    <!-- add smashable like button that makes an airhorn sound and says smash -->
+    <!-- add effects to smash button -->
+    <p>Day 8</p>
+    <audio id="myAirHorn">
+      <source src="mlg-airhorn.mp3">
+    </audio>
+    <button onclick="playAudio()" type="button">SMASH THAT LIKE BUTTON</button>
     <p>Day 7</p>
-    <a href="https://twitter.com/lumberdwelling?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @lumberdwelling</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a href="https://twitter.com/lumberdwelling?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @lumberdwelling</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <p>Day 6</p>
     <form name="selectForm">
       <p>
