--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <audio id="myAirHorn">
       <source src="mlg-airhorn.mp3">
     </audio>
-    <button onclick="playAudio()" type="button">SMASH THAT LIKE BUTTON</button>
+    <button onclick="playAudio()" type="button" class="button">SMASH THAT LIKE BUTTON</button>
     <p>Day 7</p>
     <a href="https://twitter.com/lumberdwelling?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @lumberdwelling</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
