--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <hr id="new">
     &nbsp;
     <p>Day 9</p>
+    <p>My attempts to make this button also play the air horn sound have proven futile. I did remove dependencies to Twitter's API and added the JS instead.</p>
     <audio id="myAirHorn">
       <source src="mlg-airhorn.mp3">
     </audio>
