--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <p>Day 11</p>
+    <p>Did some work on FreeCodeCamp</p>
+    <p>Day 10</p>
+    <p>Did some work on FreeCodeCamp</p>
     <p>Day 9</p>
     <p>My attempts to make this button also play the air horn sound have proven futile. I did remove dependencies to Twitter's API and added the JS instead.</p>
     <audio id="myAirHorn">
