--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Patrick Koidal's 100 Days of Code Blog</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <script src="jquery-3.2.1.min.js"></script>
   </head>
   <body>
     <ul class="navbar">
@@ -16,9 +17,12 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <p>Day 13</p>
+    <p>Monkeyed with FCC Project</p>
     <p>Day 12</p>
     <p>FreeCodeCamp Random Quote Machine</p>
     <button type="button" id="new-quote">Get a random quote</button>
+    <div class="new-quote">
     <p>Day 11</p>
     <p>Did some work on FreeCodeCamp</p>
     <p>Day 10</p>
