--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <p>Day 14</p>
+    <p>Monkeyed with FCC Project</p>
     <p>Day 13</p>
     <p>Monkeyed with FCC Project</p>
     <p>Day 12</p>
     <p>FreeCodeCamp Random Quote Machine</p>
-    <button type="button" id="new-quote">Get a random quote</button>
-    <div class="new-quote">
+    <div class="quote"></div>
+    <button type="button" class="morequotes" id="button">Get a random quote</button>
     <p>Day 11</p>
     <p>Did some work on FreeCodeCamp</p>
     <p>Day 10</p>
