--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Patrick Koidal's 100 Days of Code Blog</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-    <script src="jquery-3.2.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   </head>
   <body>
     <ul class="navbar">
