--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr id="new">
     &nbsp;
     <p>Day 14</p>
-    <p>Monkeyed with FCC Project</p>
+    <p>Monkeyed with FCC Project and broke up with jQuery hopefully</p>
     <p>Day 13</p>
     <p>Monkeyed with FCC Project</p>
     <p>Day 12</p>
