--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <p>Day 15</p>
+    <div id="example-1">
+    <button v-on:click="counter += 1">Add 1</button>
+    <p>The button above has been clicked {{ counter }} times.</p>
+    </div>
     <p>Day 14</p>
     <p>Monkeyed with FCC Project and broke up with jQuery hopefully</p>
     <p>Day 13</p>
