--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="http://quotesondesign.com/wp-json/posts?filter[orderby]=rand&filter[posts_per_page]=1"></script>
   </head>
   <body>
     <ul class="navbar">
@@ -28,8 +29,8 @@
     <p>Monkeyed with FCC Project</p>
     <p>Day 12</p>
     <p>FreeCodeCamp Random Quote Machine</p>
-    <div class="quote"></div>
-    <button type="button" class="morequotes" id="button">Get a random quote</button>
+    <div class="app"></div>
+    <button type="button" class="morequotes" id="">Get a random quote</button>
     <p>Day 11</p>
     <p>Did some work on FreeCodeCamp</p>
     <p>Day 10</p>
