--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <p>Monkeyed with FCC Project</p>
     <p>Day 12</p>
     <p>FreeCodeCamp Random Quote Machine</p>
-    <div class="app"></div>
+    <div id="quotes">
+      {{newQuote}}
+    </div>
     <button type="button" class="morequotes" id="">Get a random quote</button>
     <p>Day 11</p>
     <p>Did some work on FreeCodeCamp</p>
