--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="http://quotesondesign.com/wp-json/posts?filter[orderby]=rand&filter[posts_per_page]=1"></script>
   </head>
   <body>
     <ul class="navbar">
@@ -32,7 +31,7 @@
     <div id="quotes">
       {{newQuote}}
     </div>
-    <button type="button" class="morequotes" id="">Get a random quote</button>
+    <button v-on:click="newQuote">Get a random quote</button>
     <p>Day 11</p>
     <p>Did some work on FreeCodeCamp</p>
     <p>Day 10</p>
