--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <p>Day 18 or 19?</p>
+    <p>I lost track of days but I'm working on the random quote button still</p>
     <p>Day 15</p>
     <div id="example-1">
     <button v-on:click="counter += 1">Add 1</button>
