--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <p>Day 20</p>
+    <p>More API fiddling</p>
     <p>Day 18 or 19?</p>
     <p>I lost track of days but I'm working on the random quote button still</p>
     <p>Day 15</p>
