--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="https://api.forismatic.com/api/1.0/?method=getQuote&format=jsonp&lang=en&jsonp="></script>
+    <script src="http://quotesondesign.com/wp-json/posts?filter[orderby]=rand&filter[posts_per_page]=1"></script>
   </head>
   <body>
     <ul class="navbar">
