--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <h1 id="home"> Patrick Koidal's 100 Days of Code Blog </h1>
     <hr id="new">
     &nbsp;
+    <p>Day 22</p>
+    <p>The beatings are continuing</p>
+    <p>Day 21</p>
+    <p>The beatings will continue until morale improves</p>
     <p>Day 20</p>
     <p>More API fiddling</p>
     <p>Day 18 or 19?</p>
